[package]
name = "esp32c3-async"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
embassy-executor = { version = "0.7.0",  features = ["nightly"] }
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "dns", "dhcpv4", "dhcpv4-hostname", "defmt"] }
embassy-sync = "0.6.1"
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
esp-backtrace = { version = "0.15.0", features = ["esp32c3", "exception-handler", "panic-handler", "defmt"] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "defmt"] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32c3", "defmt"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log", "defmt-espflash"] }
esp-wifi = { version = "0.12.0", features = ["esp32c3", "utils", "wifi", "ble", "coex", "defmt"] }

[profile.dev]
opt-level = "z"

[profile.fast]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.small]
inherits = "fast"
opt-level = "z" # `z` works, but disables auto-vectorization (SIMD) and less loop unrolling
strip = "debuginfo" # `symbols` doesn't work with defmt

[profile.opti]
inherits = "fast"
debug = 1
