[package]
name = "esp32c3-async"
version = "0.1.0"
edition = "2021"

[features]
default = ["esp32c3", "defmt", "logging-jtag"]

esp32c3 = [
    "esp-backtrace/esp32c3",
    "esp-hal-buzzer/esp32c3",
    "esp-hal-drivers/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-hal/esp32c3",
    "esp-println/esp32c3",
    "esp-wifi/esp32c3",
]

log = [
    "dep:log",
    "esp-backtrace/println",
    "esp-hal-embassy/log",
    "esp-hal/log",
    "esp-println/log",
    "esp-wifi/log",
]

defmt = [
    "dep:defmt",
    "embassy-net/defmt",
    "esp-backtrace/defmt",
    "esp-hal-buzzer/defmt",
    "esp-hal-drivers/defmt",
    "esp-hal-embassy/defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-wifi/defmt",
]

logging-auto = ["esp-println/auto"]
logging-jtag = ["esp-println/jtag-serial"]
logging-uart = ["esp-println/uart"]

[dependencies]
defmt = { version = "0.3.10", optional = true }
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "dns", "dhcpv4", "dhcpv4-hostname"] }
embassy-sync = "0.6.1"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.15.0", features = ["exception-handler", "panic-handler", "colors"] }
esp-hal-drivers = { path = "./esp-hal-drivers" }
esp-hal = { version = "0.23.1" }
esp-hal-buzzer = { path = "./esp-hal-buzzer", features = ["embassy"]}
esp-hal-embassy = { version = "0.6.0" }
esp-println = { version = "0.13.0", default-features = false, features = ["colors", "critical-section"] }
esp-wifi = { version = "0.12.0", features = ["utils", "wifi", "ble", "coex"] }
log = { version = "0.4.25", optional = true }

[profile.dev]
opt-level = "z"

[profile.fast]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.small]
inherits = "fast"
opt-level = "z"     # `z` works, but disables auto-vectorization (SIMD) and less loop unrolling
strip = "debuginfo" # `symbols` doesn't work with defmt

[profile.opti]
inherits = "fast"
debug = 1
