[package]
name = "esp-hal-buzzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Buzzer driver for esp-hal"
repository = "https://github.com/esp-rs/esp-hal-community"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3.8", optional = true }
embassy-time = { version = "0.4.0" }
esp-hal = "0.23.1"

[features]
## Implement `defmt::Format` on certain types.
defmt = ["dep:defmt", "esp-hal/defmt"]

## Target the ESP32-C3.
esp32c3 = ["esp-hal/esp32c3"]
